template-demo/gogs.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: 2018-09-10T07:10:43Z
  generation: 2
  labels:
    app: gogs
  name: gogs
  namespace: cicd
  resourceVersion: "542773"
  selfLink: /apis/apps.openshift.io/v1/namespaces/cicd/deploymentconfigs/gogs
  uid: a1bd76a6-b4c8-11e8-bed5-0050563b9af0
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: gogs
    deploymentconfig: gogs
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: gogs
        deploymentconfig: gogs
    spec:
      containers:
      - image: docker.io/openshiftdemos/gogs@sha256:ca56061043c21500f587e938321d4f0ae38a74d4a9dd50ae70f8b628d19e0f32
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gogs
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/gogs/data
          name: gogs-data
        - mountPath: /etc/gogs/conf
          name: gogs-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: gogs
      serviceAccountName: gogs
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: gogs-data
      - configMap:
          defaultMode: 420
          items:
          - key: app.ini
            path: app.ini
          name: gogs-config
        name: gogs-config
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - gogs
      from:
        kind: ImageStreamTag
        name: gogs:0.11.34
        namespace: cicd
      lastTriggeredImage: docker.io/openshiftdemos/gogs@sha256:ca56061043c21500f587e938321d4f0ae38a74d4a9dd50ae70f8b628d19e0f32
    type: ImageChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-09-10T07:19:27Z
    lastUpdateTime: 2018-09-10T07:19:27Z
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: 2018-09-10T07:10:51Z
    lastUpdateTime: 2018-09-10T07:19:28Z
    message: replication controller "gogs-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
