template-demo/nexus.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
 name: glusterfs-volums-nexus-data
spec:
 accessModes:
  - ReadWriteMany
 resources:
   requests:
        storage: 1Gi
 storageClassName: glusterfs-storage
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 2
  labels:
    app: nexus
    template: nexus3-template
  name: nexus
  namespace: cicd
  resourceVersion: "543146"
  selfLink: /apis/apps.openshift.io/v1/namespaces/cicd/deploymentconfigs/nexus
  uid: null
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: nexus
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 0
      post:
        execNewPod:
          command:
          - /bin/bash
          - -c
          - curl -o /tmp/nexus-functions -s https://raw.githubusercontent.com/OpenShiftDemos/nexus/master/scripts/nexus-functions;
            source /tmp/nexus-functions; add_nexus3_redhat_repos admin admin123 http://nexus:8081
          containerName: nexus
        failurePolicy: Abort
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: nexus
    spec:
      containers:
      - env:
        - name: CONTEXT_PATH
          value: /
        image: docker.io/sonatype/nexus3@sha256:c46f74741401ed538e94cc51a272a95efef5db60a9091d95f93d339fd09fa219
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - echo
            - ok
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nexus
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /nexus-data
          name: nexus-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: glusterfs-volums-nexus-data
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - nexus
      from:
        kind: ImageStreamTag
        name: nexus:3.12.1
        namespace: cicd
      lastTriggeredImage: docker.io/sonatype/nexus3@sha256:c46f74741401ed538e94cc51a272a95efef5db60a9091d95f93d339fd09fa219
    type: ImageChange
#status:
#  availableReplicas: 1
#  conditions:
#  - lastTransitionTime: null
#    lastUpdateTime: null
#    message: Deployment config has minimum availability.
#    status: "True"
#    type: Available
#  - lastTransitionTime: null
#    lastUpdateTime: null
#    message: null
#    reason: NewReplicationControllerAvailable
#    status: "True"
#    type: Progressing
#  details:
#    causes:
#    - type: ConfigChange
#    message: config change
#  latestVersion: 1
#  observedGeneration: 2
#  readyReplicas: 1
#  replicas: 1
#  unavailableReplicas: 0
#  updatedReplicas: 1
