template-demo/nginx-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 2
  labels:
    app: nginx
    template: nginx-template
  name: nginx
  namespace: cicd
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: nginx
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 0
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: nginx
        deploymentconfig: nginx
    spec:
      containers:
      - image: docker-registry.default.svc:5000/cicd/nginx:latest
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        #- mountPath: /usr/share/nginx/html
        #  name: nginx-data
        - mountPath: /etc/nginx/conf.d
          name: nginx-config
          readOnly: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx-config
        name: nginx-config
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - nginx
        from:
          kind: ImageStreamTag
          name: 'nginx:latest'
          namespace: cicd
        lastTriggeredImage: >-
          docker-registry.default.svc:5000/cicd/nginx:latest
      type: ImageChange
