template-demo/nginx-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  creationTimestamp: null
  labels:
    name: nginx
  name: nginx
  namespace: cicd
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    app: nginx
