template-demo/tomcat-deployment.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
 name: glusterfs-volums-tomcat-1
spec:
 accessModes:
  - ReadWriteMany
 resources:
   requests:
        storage: 2Gi
 storageClassName: glusterfs-storage

---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 2
  labels:
    app: tomcat-1
  name: tomcat-1
  namespace: cicd
spec:
  replicas: 1
  selector:
    app: tomcat-1
    deploymentconfig: tomcat-1
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: tomcat-1
        deploymentconfig: tomcat-1
    spec:
      containers:
        - image: >-
            docker-registry.default.svc:5000/cicd/tomcat:latest
          imagePullPolicy: Always
          name: tomcat-1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /usr/local/tomcat/webapps/ROOT
            name: tomcat-1-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tomcat-1-data
        persistentVolumeClaim:
          claimName: glusterfs-volums-tomcat-1
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - tomcat-1
        from:
          kind: ImageStreamTag
          name: 'tomcat:latest'
          namespace: cicd
        lastTriggeredImage: >-
          docker-registry.default.svc:5000/cicd/tomcat@latest
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: tomcat-1
  name: tomcat-1
  namespace: cicd
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    deploymentconfig: tomcat-1
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
